--- a/styles/architect.css
+++ b/styles/architect.css
@@ -1,7 +1,61 @@
 /* work sans font from google font */
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Work+Sans:wght@400;500;600;700;800&display=swap");
-
+/* shared styles */
 * {
   font-family: "Inconsolata", monospace;
   font-family: "Work Sans", sans-serif;
+  /* margin: 0;
+  padding: 0; */
+}
+.btn-primary {
+    border-radius: 8px;
+    background: #ff900e;
+    width: 180px;
+    height: 64px;
+  }
+  
+/* header styles */
+header {
+  background: rgba(255, 144, 14, 0.1);
+  padding: 50px 240px;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-title {
+  font-size: 2.8rem;
+  font-weight: 700;
+  color: #131313;
+}
+
+nav > ul {
+  display: flex;
+}
+nav li {
+  list-style: none;
+  margin-right: 30px;
+  font-size: 1rem;
+  font-weight: 500;
+}
+nav li a {
+  text-decoration: none;
+  color: #424242;
+}
+
+/* banner styles */
+.banner-content {
+  max-width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+.banner-title {
+  font-size: 4rem;
+  font-weight: 700;
+  color: #131313;
+}
+.banner-description {
+  color: #727272;
 }
