--- a/styles/architect.css
+++ b/styles/architect.css
@@ -9,9 +9,13 @@
 }
 .btn-primary {
     border-radius: 8px;
+    color: #FFF;
+    font-size: 1.25rem;
+    font-weight: 600;
     background: #ff900e;
-    width: 180px;
-    height: 64px;
+    padding: 20px 25px;
+    cursor: pointer;
+    border: 0;
   }
   
 /* header styles */
@@ -58,4 +62,28 @@ nav li a {
 }
 .banner-description {
   color: #727272;
+}
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+
+/* responsive styles */
+/* mobile devices */
+@media screen and (max-width:576px) {
+    header {
+        padding:20px;
+      }
+      nav{
+        flex-direction: column;
+      }
+}
+/* medium devices */
+@media screen and (min-width:576px) and (max-width:960px) {
+    nav{
+        flex-direction: column;
+    }
+    header {
+        padding:50px;
+      }
 }
