--- a/styles/architect.css
+++ b/styles/architect.css
@@ -8,16 +8,16 @@
   padding: 0; */
 }
 .btn-primary {
-    border-radius: 8px;
-    color: #FFF;
-    font-size: 1.25rem;
-    font-weight: 600;
-    background: #ff900e;
-    padding: 20px 25px;
-    cursor: pointer;
-    border: 0;
-  }
-  
+  border-radius: 8px;
+  color: #fff;
+  font-size: 1.25rem;
+  font-weight: 600;
+  background: #ff900e;
+  padding: 20px 25px;
+  cursor: pointer;
+  border: 0;
+}
+
 /* header styles */
 header {
   background: rgba(255, 144, 14, 0.1);
@@ -63,27 +63,59 @@ nav li a {
 .banner-description {
   color: #727272;
 }
-.banner img{
-    margin-top: 20px;
-    width: 100%;
+.banner img {
+  margin-top: 20px;
+  width: 100%;
 }
 
 /* responsive styles */
 /* mobile devices */
-@media screen and (max-width:576px) {
-    header {
-        padding:20px;
-      }
-      nav{
-        flex-direction: column;
-      }
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav {
+    flex-direction: column;
+  }
 }
 /* medium devices */
-@media screen and (min-width:576px) and (max-width:960px) {
-    nav{
-        flex-direction: column;
-    }
-    header {
-        padding:50px;
-      }
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  nav {
+    flex-direction: column;
+  }
+  header {
+    padding: 50px;
+  }
+}
+/* main styles */
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+/* teams styles */
+
+.teams-container {
+  display: flex;
+  align-items: center;
+}
+.teams-img-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+}
+.teams-content {
+  padding-left: 70px;
+  padding-right: 70px;
+}
+.teams-title {
+  font-size: 2.8rem;
+}
+.teams-title .quick-list {color: #727272;
+    font-size: 45px;
+    font-weight: 500;
+}
+.teams-title .text-features {
+  color: #ff900e;
+  font-weight: 700;
 }
