--- a/styles/architect.css
+++ b/styles/architect.css
@@ -17,8 +17,12 @@
   cursor: pointer;
   border: 0;
 }
+.text-light-gray{
+    color: #727272;
+  }
 
 /* header styles */
+
 header {
   background: rgba(255, 144, 14, 0.1);
   padding: 50px 240px;
@@ -60,37 +64,17 @@ nav li a {
   font-weight: 700;
   color: #131313;
 }
-.banner-description {
-  color: #727272;
-}
+
 .banner img {
   margin-top: 20px;
   width: 100%;
 }
 
-/* responsive styles */
-/* mobile devices */
-@media screen and (max-width: 576px) {
-  header {
-    padding: 20px;
-  }
-  nav {
-    flex-direction: column;
-  }
-}
-/* medium devices */
-@media screen and (min-width: 576px) and (max-width: 960px) {
-  nav {
-    flex-direction: column;
-  }
-  header {
-    padding: 50px;
-  }
-}
 /* main styles */
+
 main {
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 70px auto;
 }
 
 /* teams styles */
@@ -111,7 +95,7 @@ main {
 .teams-title {
   font-size: 2.8rem;
 }
-.teams-title .quick-list {color: #727272;
+.teams-title .quick-list {
     font-size: 45px;
     font-weight: 500;
 }
@@ -119,3 +103,34 @@ main {
   color: #ff900e;
   font-weight: 700;
 }
+
+/* responsive styles */
+
+/* mobile devices */
+
+@media screen and (max-width: 576px) {
+    header {
+      padding: 20px;
+    }
+    nav, .teams-container {
+      flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+  }
+
+  /* medium devices */
+
+  @media screen and (min-width: 576px) and (max-width: 960px) {
+    nav, .teams-container {
+      flex-direction: column;
+    }
+    header {
+      padding: 50px;
+    }
+  }
