--- a/styles/architect.css
+++ b/styles/architect.css
@@ -4,8 +4,6 @@
 * {
   font-family: "Inconsolata", monospace;
   font-family: "Work Sans", sans-serif;
-  /* margin: 0;
-  padding: 0; */
 }
 .btn-primary {
   border-radius: 8px;
@@ -17,16 +15,16 @@
   cursor: pointer;
   border: 0;
 }
-.text-light-gray{
-    color: #727272;
-  }
+.text-light-gray {
+  color: #727272;
+}
 
-  .section-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
-  }
-  
+.section-title {
+  font-size: 2.8rem;
+  font-weight: 700;
+  color: #131313;
+}
+
 /* header styles */
 
 header {
@@ -96,12 +94,36 @@ main {
   font-size: 2.8rem;
 }
 .teams-title .quick-list {
-    font-size: 45px;
-    font-weight: 500;
+  font-size: 45px;
+  font-weight: 500;
 }
 .teams-title .text-features {
   color: #ff900e;
   font-weight: 700;
+}
+/* facts section style */
+
+.facts-card-container {
+  display: flex;
+  justify-content: space-around;
+}
+.facts-card-container .card {
+  border-radius: 8px;
+  border: 1px solid #ff900e;
+  text-align: center;
+  padding: 30px;
+}
+.facts-card-container .card-stats {
+  font-size: 2.8rem;
+  color: #424242;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.facts-card-container .card-title {
+  color: #727272;
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 5px;
 }
 
 /* responsive styles */
@@ -109,28 +131,30 @@ main {
 /* mobile devices */
 
 @media screen and (max-width: 576px) {
-    header {
-      padding: 20px;
-    }
-    nav, .teams-container {
-      flex-direction: column;
-    }
-    .teams-img-container{
-        grid-template-columns: 1fr;
-    }
-    .teams-content{
-        padding-left: 20px;
-        padding-right: 20px;
-    }
+  header {
+    padding: 20px;
   }
-
-  /* medium devices */
-
-  @media screen and (min-width: 576px) and (max-width: 960px) {
-    nav, .teams-container {
-      flex-direction: column;
-    }
-    header {
-      padding: 50px;
-    }
+  nav,
+  .teams-container {
+    flex-direction: column;
   }
+  .teams-img-container {
+    grid-template-columns: 1fr;
+  }
+  .teams-content {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+/* medium devices */
+
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  nav,
+  .teams-container {
+    flex-direction: column;
+  }
+  header {
+    padding: 50px;
+  }
+}
