--- a/styles/architect.css
+++ b/styles/architect.css
@@ -126,6 +126,22 @@ main {
   margin-top: 5px;
 }
 
+/* sponsors section styles */
+
+.sponsors {
+  text-align: center;
+}
+.sponsors-img-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 40px;
+}
+.sponsors-img-container img {
+  width: 165px;
+}
+
 /* responsive styles */
 
 /* mobile devices */
@@ -135,15 +151,21 @@ main {
     padding: 20px;
   }
   nav,
-  .teams-container {
+  .teams-container,
+  .facts-card-container,
+  .sponsors-img-container {
     flex-direction: column;
   }
   .teams-img-container {
     grid-template-columns: 1fr;
   }
-  .teams-content {
+  .teams-content,
+  .facts-card-container {
     padding-left: 20px;
     padding-right: 20px;
+  }
+  .facts-card-container {
+    gap: 20px;
   }
 }
 
@@ -151,7 +173,8 @@ main {
 
 @media screen and (min-width: 576px) and (max-width: 960px) {
   nav,
-  .teams-container {
+  .teams-container,
+  .sponsors-img-container {
     flex-direction: column;
   }
   header {
