--- a/styles/architect.css
+++ b/styles/architect.css
@@ -101,6 +101,26 @@ main {
   color: #ff900e;
   font-weight: 700;
 }
+
+/* feature section styles */
+
+.features {
+  margin-top: 130px;
+  display: flex;
+  gap: 146px;
+}
+.features .section-title {
+  border-left: 5px solid #ff900e;
+  padding-left: 20px;
+}
+.feature-content .card {
+  padding: 30px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
 /* facts section style */
 
 .facts-card-container {
@@ -125,7 +145,27 @@ main {
   font-weight: 600;
   margin-top: 5px;
 }
-
+.ten-years-badge {
+  color: #fff;
+  border-radius: 8px;
+  background: #ff900e;
+  width: 342px;
+  padding: 40px;
+  text-align: center;
+  position: relative;
+  bottom: 100px;
+}
+.feature-img img{
+ height: 90%;
+ margin-left: 90px;
+}
+.ten-years-badge h2 {
+  font-size: 4rem;
+  margin: 0;
+}
+.ten-years-badge p{
+  font-size: 1.5rem;
+}
 /* sponsors section styles */
 
 .sponsors {
@@ -153,8 +193,17 @@ main {
   nav,
   .teams-container,
   .facts-card-container,
-  .sponsors-img-container {
+  .sponsors-img-container, .features {
     flex-direction: column;
+  }
+  .feature-img img{
+    width: 90%;
+    margin-left: 0;
+  }
+  .ten-years-badge{
+    position: static;
+    max-width: 300px ;
+    
   }
   .teams-img-container {
     grid-template-columns: 1fr;
@@ -174,6 +223,7 @@ main {
 @media screen and (min-width: 576px) and (max-width: 960px) {
   nav,
   .teams-container,
+  .features,
   .sponsors-img-container {
     flex-direction: column;
   }
